<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_percent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:maxLines="1"
                    android:text="@string/percent_title"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="4sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:maxLines="1"
                    android:text="@string/percent_date"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="5sp"
                    app:autoSizeStepGranularity="4sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_percent" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_random"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/random_title"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="4sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_random" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_constellation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/constellation_title"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="4sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_constellation_1" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/name_title"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="4sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:maxLines="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_name" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>